--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/parser": "^7.27.2",
+    "@babel/traverse": "^7.27.1",
     "@tanstack/react-virtual": "^3.13.9",
     "lucide-react": "^0.330.0",
-    "next": "14.1.0",
+    "next": "^14.2.29",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/babel__traverse": "^7.20.7",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
+    "postcss": "^8.4.38",
     "typescript": "^5.3.3"
   }
 }
