--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/parser": "^7.27.2",
     "@babel/traverse": "^7.27.1",
+    "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-virtual": "^3.13.9",
     "lucide-react": "^0.330.0",
     "next": "^14.2.29",
