--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/traverse": "^7.27.1",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-virtual": "^3.13.9",
+    "dotenv": "^16.5.0",
     "lucide-react": "^0.330.0",
     "next": "^14.2.29",
     "react": "^18.2.0",
