Code Analysis tab wired up. Uses asnyc call to Claude to analyse files one by one.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.53.0",
     "@babel/parser": "^7.27.2",
     "@babel/traverse": "^7.27.1",
     "@supabase/ssr": "^0.6.1",
